[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synchrophasor"
version = "1.0.0"
description = "Synchrophasor module represents implementation of IEEE C37.118.2 standard in Python."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Stevan Sandi", email = "stevan.sandi@gmail.com"},
    {name = "Tomo Popovic"},
    {name = "Bozo Krstajic"},
]
keywords = ["synchrophasor", "pypmu", "pdc", "pmu", "power-systems", "ieeec37118"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/iicsys/pypmu"
Repository = "https://github.com/iicsys/pypmu"

[tool.setuptools.packages.find]
include = ["synchrophasor*"]

